finally tested on windows/edge -- fix resulting weirdness
- magic wand cursor
- unnecessary horizontal scroll bar on short code blocks

--- a/components/code-block/Code.module.css
+++ b/components/code-block/Code.module.css
@@ -1,7 +1,6 @@
 .code_block {
   position: relative;
   width: 100%;
-  overflow-x: scroll;
   margin: 1em auto;
 }
 
